--- a/comprar.html
+++ b/comprar.html
@@ -23,6 +23,11 @@
           <li class="li__link"><a class="link" href="blog.html">Blog</a></li>
         </ul>
       </div>
+
+      <div class="hamburguesa">
+        <img src="images/menu-regular-24 (1).png" alt="menu" id="hamburguesa">
+      </div>
+
     </nav>
   </header> 
 
@@ -207,4 +212,5 @@
     </div>
   </footer>
 </body>
+<script src="js/main.js"></script>
 </html>
