--- a/vender.html
+++ b/vender.html
@@ -59,7 +59,7 @@
   <footer class="footer">
     <div class="footer__container">
       <div class="info">
-        <a class="link__info" href="index.html">Ir al Comienzo.</a>
+        <a class="link__info" href="vender.html">Ir al Comienzo.</a>
         <a class="link__info" href="contacto.html">Contactenos.</a>
       </div>
       <div class="redes">
