--- a/alquilar.html
+++ b/alquilar.html
@@ -184,7 +184,7 @@
         <footer class="footer">
     <div class="footer__container">
       <div class="info">
-        <a class="link__info" href="index.html">Ir al Comienzo.</a>
+        <a class="link__info" href="alquilar.html">Ir al Comienzo.</a>
         <a class="link__info" href="contacto.html">Contactenos.</a>
       </div>
       <div class="redes">
