--- a/comprar.html
+++ b/comprar.html
@@ -200,7 +200,7 @@
   <footer class="footer">
     <div class="footer__container">
       <div class="info">
-        <a class="link__info" href="index.html">Ir al Comienzo.</a>
+        <a class="link__info" href="comprar.html">Ir al Comienzo.</a>
         <a class="link__info" href="contacto.html">Contactenos.</a>
       </div>
       <div class="redes">
