--- a/comprar.html
+++ b/comprar.html
@@ -205,9 +205,9 @@
       </div>
       <div class="redes">
         <p>Copyrigth ©Atalaya. Todos Los Derechos Reservados.</p>
-        <a href="#"><img class="icon" src="svg/facebook.svg" alt="facebook"></a>
-        <a href="#"><img class="icon" src="svg/instagram.svg" alt="instagram"></a>
-        <a href="#"><img class="icon" src="svg/whatsapp.svg" alt="whatsapp"></a>
+        <a href="https://www.facebook.com/profile.php?id=100083575488131" target="blank"><img class="icon" src="svg/facebook.svg" alt="facebook"></a>
+        <a href="https://www.instagram.com/atalayabienesraices4008/" target="blank"><img class="icon" src="svg/instagram.svg" alt="instagram"></a>
+        <a href="https://wa.me/3364624553" target="blank"><img class="icon" src="svg/whatsapp.svg" alt="whatsapp"></a>
       </div>
     </div>
   </footer>
